--- a/Hackathon Project/.env
+++ b/Hackathon Project/.env
@@ -1,2 +1,5 @@
 VITE_SPOTIFY_CLIENT_ID=f65ac553e6794032bcacd85ae7b5dd85
 VITE_SPOTIFY_REDIRECT_URI=http://localhost:3000
+CLIENT_ID = "f65ac553e6794032bcacd85ae7b5dd85"
+CLIENT_ID_SECRET = "9dd07e81e6024dbdae7bbc744e53934e"
+URI = "http://127.0.0.1:3000"
